<resources>
    <string name="app_name">i221072</string>

    <!-- Strings used by activity_main2.xml -->
    <string name="arrow_back_desc">Arrow back</string>
    <string name="socially">Socially</string>
    <string name="create_account_description">Create an account and sign up</string>
    <string name="profile_desc">Profile</string>
    <string name="app_icon_desc">App icon</string>
    <string name="create_account_button">Create an Account</string>

    <!-- Form labels and hints -->
    <string name="label_username">Username</string>
    <string name="hint_username">user</string>

    <string name="label_yourname">Your Name</string>
    <string name="hint_yourname">Your Name</string>

    <string name="label_yourlastname">Your Last Name</string>
    <string name="hint_yourlastname">Your Last Name</string>

    <string name="label_address">Address</string>
    <string name="hint_address">Enter address</string>

    <string name="label_dob">Date of Birth</string>
    <string name="hint_dob">01–05–2002</string>

    <string name="label_email">E-mail</string>
    <string name="hint_email">Enter E-mail</string>

    <string name="label_password">Password</string>
    <string name="hint_password">Password</string>

    <!-- Strings used by activity_main3.xml -->
    <string name="txt_socially">Socially</string>
    <string name="default_username">jacob_w</string>
    <string name="login_button">Log in</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="signup_text">Sign up.</string>
    <string name="save_button">Save</string>

    <!-- Login related strings -->
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="credentials_incorrect">Username or password is incorrect</string>
    <string name="login_failed">Login failed: %1$s</string>

    <!-- Activity4 strings -->
    <string name="login_button_text">Log in</string>
    <string name="or_text">OR</string>
    <string name="forget_password">Forget Password?</string>

    <!-- Strings referenced by item_post.xml -->
    <string name="profile_pic_desc">Profile picture</string>
    <string name="username_label">username</string>
    <string name="location_label">Location</string>
    <string name="more_options">More options</string>
    <string name="post_image_desc">Post image</string>
    <string name="like_label">Like</string>
    <string name="comment_label">Comment</string>
    <string name="share_label">Share</string>
</resources>